Ackd service that supports ackd-configuration and the ack,unack,clear,escalate behavior of acknowledgment